// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders status FAIL 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      Array [
        Object {
          "fontWeight": "bold",
        },
        Object {
          "color": "#d32f2f",
        },
      ],
    ]
  }
>
  <Text>
    FAIL
  </Text>
</Text>
`;

exports[`renders status PAID 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      Array [
        Object {
          "fontWeight": "bold",
        },
        Object {
          "color": "#388e3c",
        },
      ],
    ]
  }
>
  <Text>
    PAID
  </Text>
</Text>
`;
